# pneural-context

./: .env.example  .gitignore  .gitleaks.toml  .pneural-context.json  .pre-commit-config.yaml  BRANCH_PROTECTION.md  Dockerfile  LICENSE  README.md  alembic.ini  codecov.yml  coverage.xml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  secrets.yml
alembic/: env.py
alembic/versions/: 7f2686c2f5df_initial_schema.py  d8e9f1a2b3c4_add_pb_errors.py  e5f7a8b9c0d1_add_pb_sync_source_and_sync_state.py
docs/: ARCHITECTURE.md  ENV_REFERENCE.md  INSTALL.md  MCP_TOOLS.md  TOGGLE.md
docs/adr/: 0009-memoria-pneural-bridge-architecture.md  0010-bidirectional-memory-sync-protocol.md  0011-memoria-episodic-source-pneural-injection-consumer.md  0012-fix-memoria-bridge-endpoints.md  0013-pneural-sync-adapter-for-memoria-federation.md  0014-single-context-injector.md  0015-procedure-aware-smart-context.md  0016-monolithic-knowledge-base.md  0017-three-layer-procedure-matching.md  README.md
docs/references/: README.md
examples/: docker-compose.yml  standalone.py  with_memoria.py
experimental/: README.md  architecture.mmd  consolidation-tiers.mmd  injection-lifecycle.mmd  memory-lifecycle.mmd  rag-pipeline.mmd  smart-dedup-zones.mmd  turboquant-rag-collab.mmd
mcp/: help_texts.py  server.py
plugin/: index.mjs  package.json
plugins/opencode/: pneural-context.mjs
pneural_context/: auth.py  cli.py  deps.py  logging.py  pb_config.py  pb_dashboard.py  pb_db.py  pb_embeddings.py  pb_engine.py  pb_llm.py  pb_memoria.py  pb_schema.sql  pb_server.py  server.py
pneural_context/db/: __init__.py  consolidated.py  costs.py  decay.py  dedup.py  memory.py  papers.py  pool.py  procedures.py  search.py  sync.py  utils.py
pneural_context/mcp_server/: __init__.py  help_texts.py  server.py
pneural_context/models/: __init__.py  config.py  context.py  costs.py  memory.py  procedures.py  session.py
pneural_context/routers/: anchors.py  archive.py  briefing.py  config.py  consolidation.py  context.py  costs.py  dashboard.py  decay.py  errors.py  health.py  memory.py  papers.py  procedures.py  projects.py  recall.py  reindex.py  session.py  status.py
pneural_context/static/: dashboard.html
scripts/: add_skills_procedures.py  add_tool_procedures.py  backfill_embeddings.py  ingest_agents_md.py  slim_agents_md.py
tests/: conftest.py  test_auth.py  test_context_smart_procedures.py  test_dashboard.py  test_db.py  test_db_consolidated.py  test_db_costs.py  test_db_decay.py  test_db_dedup.py  test_db_memory.py  test_db_pool.py  test_db_procedures.py  test_db_search.py  test_db_utils.py  test_e2e.py  test_embeddings.py  test_engine.py  test_kb_ingest.py  test_llm.py  test_logging.py  test_memoria.py  test_recall_memoria_merge.py  test_routers.py  test_server.py
tests/poc/: BENCHMARK_PLAN.md  PLAN.md  api_exercises.py  benchmark.py  code_quality.py  conftest.py  conversation.json  conversation_runner.py  db_inspector.py  faithfulness.py  helpers.py  llm_judge.py  log_inspector.py  mcp_exercise.py  pytest.ini  report_generator.py  run_poc.py  seed_data.json  telemetry.py  test_01_infra.py  test_02_context_injection.py  test_03_smart_dedup.py  test_04_session_recording.py  test_05_compaction.py  test_06_mcp_tools.py  test_07_lifecycle.py  test_08_plugin_hooks.py  test_09_cost_analysis.py
tests/poc/logs/: api_results.json  code_quality.json  db_inspection.json  faithfulness.json  llm_judge.json  mcp_results.json  treatment_results.json
tests/poc/reports/: .gitkeep
