[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pneural-context"
version = "0.1.0a1"
description = "Persistent neural context for LLMs — memory, consolidation, decay, and recall"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Daivolt" },
]
keywords = ["llm", "memory", "context", "agent", "persistent", "consolidation", "decay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
memoria = [
    "httpx>=0.27.0",
]
embeddings = [
    "sentence-transformers>=2.7.0",
    "torch>=2.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
pneural-context = "pneural_context.cli:main"

[project.urls]
Homepage = "https://github.com/daivolt/pneural-context"
Repository = "https://github.com/daivolt/pneural-context"
Issues = "https://github.com/daivolt/pneural-context/issues"

[tool.hatch.build.targets.wheel]
packages = ["pneural_context"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]