[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pneural-context"
version = "0.1.0a1"
description = "Persistent neural context for LLMs — memory, consolidation, decay, and recall"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Daivolt" },
]
keywords = ["llm", "memory", "context", "agent", "persistent", "consolidation", "decay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
memoria = [
    "httpx>=0.27.0",
]
embeddings = [
    "sentence-transformers>=2.7.0",
    "torch>=2.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "mypy>=1.10.0",
]

mcp = [
    "mcp>=0.1.0",
]

[project.scripts]
pneural-context = "pneural_context.cli:main"
pneural-context-mcp = "pneural_context.mcp_server.server:run"

[project.urls]
Homepage = "https://github.com/daivolt/pneural-context"
Repository = "https://github.com/daivolt/pneural-context"
Issues = "https://github.com/daivolt/pneural-context/issues"

[tool.hatch.build.targets.wheel]
packages = ["pneural_context"]

[tool.hatch.build.targets.wheel.force-include]
"pneural_context/pb_schema.sql" = "pneural_context/pb_schema.sql"
"pneural_context/static/dashboard.html" = "pneural_context/static/dashboard.html"
"alembic" = "alembic"
"alembic.ini" = "alembic.ini"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring live server (deselected in CI)",
]
addopts = "--cov=pneural_context --cov-fail-under=65 --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "pneural_context/cli.py",
    "pneural_context/mcp_server/*",
    "pneural_context/pb_server.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["C4", "E", "F", "I001", "PERF", "W", "B", "UP", "N", "SIM"]
ignore = ["E501", "SIM117", "SIM105", "PERF401"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
[[tool.mypy.overrides]]
module = ["asyncpg.*", "aiohttp.*", "mcp.*", "sentence_transformers.*", "alembic.*", "sqlalchemy.*"]
ignore_missing_imports = true
